Mon Jul 07 18:04:21 2003  George Lebl <jirka@5z.com>

	* configure.in, gui/greeter/Makefile.am: compile gdmgreeter with
	  viciousui (adds also libgnomeui, though we don't use it) (ugh!)

	* gui/gdmXnestchooser.c, gui/gdmchooser.c, gui/gdmcomm.c,
	  gui/gdmflexiserver.c, gui/gdmlogin.c, gui/gdmphotosetup.c,
	  gui/gdmsetup.c, gui/greeter/Makefile.am, gui/greeter/greeter.[ch],
	  gui/greeter/greeter_action_language.c,
	  gui/greeter/greeter_item_pam.c, gui/greeter/greeter_session.c,
	  gui/greeter/greeter_system.c: HIGify as many message dialogs
	  as possible.  Buttons now make more sense, ordering is HIGgy,
	  and all such good stuff.

Mon Jul 07 15:42:44 2003  George Lebl <jirka@5z.com>

	* daemon/misc.c, gui/gdmXnestchooser.c: the display check code was
	  wrong, it only used the tcp connections.  Which are the most robust
	  way, but we also really need to check the lock file.

Mon Jul 07 12:41:21 2003  George Lebl <jirka@5z.com>

	* gui/gdmsetup.(c|glade), gui/gdmcomm.c, gui/gdmphotosetup.c: Change
	  so that messages in the .po files do not contain unneccessary
	  markup.  Fixes #101794 and #101795

	* config/Makefile.am: make the /etc/X11/dm dir if it doesn't exist
	  fixes #116836

Thu Jul 03 14:57:38 2003  George Lebl <jirka@5z.com>

	* daemon/errorgui.c: the details file is read first, capped at 500
	  lines, and so now we can run the errorbox as the gdm user meaning
	  no more gtk code as root.

	* daemon/gdm.h, daemon/misc.[ch], daemon/xdmcp.c, daemon/slave.c,
	  daemon/auth.c: Apparently gethostbyaddr can return a dot in the
	  name field meaning unknown host which is kind of crap, so handle
	  that.  In fact make our own saner gdm_gethostby{addr,name} that
	  handle such cases and cache last result for 5 seconds.  This way we
	  do a lot less dns lookups since we used to do 1 or 2 (or even 3)
	  per every xdmcp packet (if tcpwrappers were on).  Also instead of
	  resolving ip to name and back to ip, keep the list of addresses of