@@ -568,8 +568,8 @@ leave_enter_emission_hook (GSignalInvocationHint        *ihint,
                       if (!retval)
                         {
                           GtkWidget *dialog =
-                            gtk_message_dialog_new (NULL, 0, GTK_MESSAGE_WARNING,
-                                                    GTK_BUTTONS_CLOSE,
+                            gtk_message_dialog_new (NULL, 0, GTK_MESSAGE_ERROR,
+                                                    GTK_BUTTONS_OK,
                                                     _("Error while trying to run (%s)\n"\
                                                     "which is linked to (%s)"),
                                                     action,
