@@ -1,3 +1,9 @@
+Mon Jul 07 18:13:34 2003  George Lebl <jirka@5z.com>
+
+	* gui/modules/dwellmouselistener.c,
+	  gui/modules/keymouselistener.c:  Error dialogs are not warnings,
+	  and should have OK and not CLOSE.  Not quite HIG, but closer.
+
 Mon Jul 07 18:04:21 2003  George Lebl <jirka@5z.com>
 
 	* configure.in, gui/greeter/Makefile.am: compile gdmgreeter with
